--- a/Currency_Converter/app/src/main/res/layout/forselecting.xml
+++ b/Currency_Converter/app/src/main/res/layout/forselecting.xml
@@ -66,12 +66,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ADD"
+                    android:onClick="sendMessage3"
                     android:id="@+id/button3" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="DEL"
+                    android:onClick="sendMessage4"
                     android:id="@+id/button4" />
 
             </LinearLayout>
